@@ -17,6 +17,7 @@ glibc (2.31-0experimental2) UNRELEASED; urgency=medium
     sunrpc/tst-udp-* failures.
   * debian/sysdeps/hurd-i386.mk: Add -march=i686 to fix math issues until gcc
     is fixed to switch to i686 as was actually expected already.
+  * debian/testsuite-xfail-debian.mk: Update hurd-i386 results.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 May 2020 19:22:19 +0200
 
